# reelpod-studio

./: .env.example  .eslintrc.cjs  .gitignore  .mcp.json  AGENTS.md  README.md  ROADMAP.md  fix5.js  fix5.py  fix_tests.js  fix_tests.py  index.html  package-lock.json  package.json  skills-lock.json  start-acestep.sh  tailwind.config.ts  tsconfig.json  tsconfig.mcp.json  tsconfig.tsbuildinfo  vite.config.ts
.agents/: BAKCLOG.md  PROJECT_CONTEXT.md  TECHNICAL_DEBT.md  state.json
.cursor/: mcp.json
backend/: .env.example  main.py  pyproject.toml  requirements.txt  test_acestep_repository.py  test_api_contract.py  test_audio_repository.py  test_audio_service.py  test_credits_service.py  test_image_repository.py  test_image_service.py  test_it000025_us001.py  test_llm_skill.py  test_main.py  test_media_repository.py  test_orchestration_service.py  test_start_acestep.py  test_us001_architecture.py  test_us003_dependencies.py  test_us005_project_context.py  test_video_repository.py  test_video_service.py  test_wan_comfy_helpers.py
backend/config/: model_credits.yaml
backend/llm-skills/strudel-pattern-generator/: SKILL.md  SKILL.test.ts
backend/llm-skills/strudel-pattern-generator/examples/: valid-patterns.md  valid-patterns.test.ts
backend/models/: __init__.py  constants.py  errors.py  queue.py  schemas.py
backend/models/Wan-AI/Wan2.2-I2V-A14B/: .mv
backend/repositories/: __init__.py  acestep_repository.py  audio_repository.py  image_repository.py  media_repository.py  video_repository.py  wan_comfy_helpers.py
backend/routes/: api.py
backend/scripts/: README-comfy-diffusion.md  check_comfy_diffusion.py  setup-comfy-diffusion.sh
backend/services/: audio_service.py  credits_service.py  image_service.py  orchestration_service.py  video_service.py
(+351 files in other folders)
