[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "diffsynth",
    "ffmpeg-python>=0.2.0",
    "fastapi==0.116.1",
    "python-dotenv==1.1.1",
    "realesrgan>=0.3.0",
    "torch>=2.10.0",
    "torchcodec>=0.10.0",
    "torchvision>=0.25.0",
    "uvicorn==0.35.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
