[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.12.0",
    "av>=14.2.0",
    "comfy-diffusion[comfyui]>=0.1.1",
    "diffsynth",
    "ffmpeg-python>=0.2.0",
    "fastapi==0.116.1",
    "python-dotenv==1.1.1",
    "realesrgan>=0.3.0",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "uvicorn==0.35.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.uv]
# Use only PyPI so pillow>=12.1.1 and other deps resolve. For CUDA 12.8 torch, install after sync:
#   uv pip install torch torchvision --index-url https://download.pytorch.org/whl/cu128
index-url = "https://pypi.org/simple"
